--- a/openstack/neutron/templates/nanny-deployment.yaml
+++ b/openstack/neutron/templates/nanny-deployment.yaml
@@ -29,7 +29,7 @@ spec:
       containers:
 {{- if .Values.nanny.cleanup_pending_lb.enabled }}
         - name: cleanup-pending-lb
-          image: {{.Values.global.imageRegistry}}/{{.Values.global.image_namespace}}/neutron-nanny:{{.Values.imageVersion_neutron_nanny}}
+          image: {{.Values.global.imageRegistry}}/{{.Values.global.image_namespace}}/neutron-nanny:{{.Values.imageVersionNanny | required "Please set neutron.imageVersionNanny"}}
           imagePullPolicy: IfNotPresent
           command:
             - dumb-init
