--- a/openstack/neutron/values.yaml
+++ b/openstack/neutron/values.yaml
@@ -8,9 +8,7 @@ osprofiler: {}
 global:
   dbUser: neutron
   # dbPassword:
-  imageRegistry:
-  fernetRouter:
-    image: "monsoon/fernet-router:latest"
+  # imageRegistry:
   metadata_workers: 1
 
 pod:
@@ -33,20 +31,28 @@ pod:
     f5_agent: false
     cisco_ml2_ucsm_bm: false
 
-agent:
-  enable_daemonset: false
-  disable_deployments: false
-  image_tag: mitaka
-  image_name: neutron
-
 debug: "True"
-
 port_metrics: '9102'
 l2_port_metrics: '9102'
 l3_port_metrics: '9103'
 
-image_tag: mitaka
-image_name: neutron
+imageName: 'monsoon/loci-neutron'
+# imageVersion:
+# imageVersionServerRPC:
+# imageVersionServerAPI:
+# imageVersionF5:
+# imageVersionACI:
+# imageVersionASR1kML2:
+# imageVersionASR1k:
+# imageVersionUCSM:
+# imageVersionNSXv3:
+# imageVersionNanny:
+# imageVersionEntanglement:
+# imageVersionNetworkAgent:
+# imageVersionNetworkAgentDHCP:
+# imageVersionNetworkAgentMetadata:
+# imageVersionNetworkAgentL3:
+# imageVersionNetworkAgentOVS:
 
 service_plugins: neutron_lbaas.services.loadbalancer.plugin.LoadBalancerPluginv2,networking_cisco.plugins.cisco.service_plugins.cisco_device_manager_plugin.CiscoDeviceManagerPlugin,networking_cisco.plugins.cisco.service_plugins.cisco_router_plugin.CiscoRouterPlugin
 default_router_type: ASR1k_router
@@ -325,7 +331,6 @@ rabbitmq_notifications:
   name: neutron
 
 # secgroup_entanglement_exporter:
-#  image_tag: null
 #  release: null # Neutron release in lower case, e.g. "queens"
 
 # openstack-watcher-middleware
@@ -333,7 +338,6 @@ watcher:
   enabled: true
 
 # neutron nanny
-# imageVersion_neutron_nanny:
 nanny:
   enabled: False
   # run the pod with an infinite sleep loop for debugging
