--- a/common/staging/rabbitmq/templates/etc-configmap.yaml
+++ b/common/staging/rabbitmq/templates/etc-configmap.yaml
@@ -1,9 +1,9 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: {{ template "fullname" . }}-config
+  name: {{ template "rabbitmq.fullname" . }}-config
   labels:
-    app: {{ template "fullname" . }}
+    app: {{ template "rabbitmq.fullname" . }}
     chart: "{{ .Chart.Name }}-{{ .Chart.Version }}"
     release: "{{ .Release.Name }}"
     heritage: "{{ .Release.Service }}"
