--- a/common/staging/rabbitmq/templates/service.yaml
+++ b/common/staging/rabbitmq/templates/service.yaml
@@ -1,9 +1,9 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ template "fullname" . }}
+  name: {{ template "rabbitmq.fullname" . }}
   labels:
-    app: {{ template "fullname" . }}
+    app: {{ template "rabbitmq.fullname" . }}
     chart: "{{ .Chart.Name }}-{{ .Chart.Version }}"
     release: "{{ .Release.Name }}"
     heritage: "{{ .Release.Service }}"
@@ -29,5 +29,5 @@ spec:
       protocol: TCP
       port: {{ default "4369" .Values.ports.epmd }}
   selector:
-    app: {{ template "fullname" . }}
+    app: {{ template "rabbitmq.fullname" . }}
     release: {{ .Release.Name }}
