Changed namespace for infra-exporters and added required for vcenter-exporters

--- a/openstack/infra-exporters/vcenter-exporters/templates/vcenter_datacenter_exporter_configmap.yaml
+++ b/openstack/infra-exporters/vcenter-exporters/templates/vcenter_datacenter_exporter_configmap.yaml
@@ -13,16 +13,16 @@ template: |
   kind: ConfigMap
   apiVersion: v1
   metadata:
-    name: vcenter-exporter-{{ name }}-`}}{{ $exporter_type_values.name }}{{`
-    namespace: monsoon3
+    name: vcenter-exporter-{{ name }}-`}}{{ required ".Values.vcenter_exporters.<exporter_type>.name is missing" $exporter_type_values.name }}{{`
+    namespace: infra-exporters
     labels:
       system: openstack
       service: metrics
       component: configuration
   data:
-    config-{{ name }}-`}}{{ $exporter_type_values.name }}{{`.yaml: |
-      prometheus_port: `}}{{ $global_values.vcenter_exporters.prometheus_port }}{{`
-      log_level: `}}{{ $global_values.vcenter_exporters.device_information.log_level | quote }}{{`
+    config-{{ name }}-`}}{{ required ".Values.vcenter_exporters.<exporter_type>.name is missing" $exporter_type_values.name }}{{`.yaml: |
+      prometheus_port: `}}{{ required ".Values.vcenter_exporters.prometheus_port is missing" $global_values.vcenter_exporters.prometheus_port }}{{`
+      log_level: `}}{{ required ".Values.vcenter_exporters.device_information.log_level is missing" $global_values.vcenter_exporters.device_information.log_level | quote }}{{`
       device_information:
         hostname: {{ host | quote }}
         username: "{{ username }}"
@@ -31,8 +31,8 @@ template: |
         ignore_ssl: `}}{{ $global_values.vcenter_exporters.device_information.ignore_ssl | quote }}{{`
         availability_zone: {{ availability_zone | quote }}
       exporter_types:
-        `}}{{ $exporter_type_values.name }}{{`:
-          name: `}}{{ $exporter_type_values.name | quote }}{{`
+        `}}{{ required ".Values.vcenter_exporters.<exporter_type>.name is missing" $exporter_type_values.name }}{{`:
+          name: `}}{{ required ".Values.vcenter_exporters.<exporter_type>.name is missing" $exporter_type_values.name | quote }}{{`
         `}}{{- range $key, $val := $exporter_type_values }}
         {{ if eq $key "collector" }}
           {{ $key }}:
