--- a/openstack/infra-exporters/vcenter-exporters/templates/vcenter_datacenter_exporter_deployment.yaml
+++ b/openstack/infra-exporters/vcenter-exporters/templates/vcenter_datacenter_exporter_deployment.yaml
@@ -13,8 +13,8 @@ template: |
   kind: Deployment
   apiVersion: extensions/v1beta1
   metadata:
-    name: vcenter-exporter-{{ name }}-`}}{{ $exporter_type_values.name }}{{`
-    namespace: monsoon3
+    name: vcenter-exporter-{{ name }}-`}}{{ required ".Values.vcenter_exporters.<exporter_type>.name is missing" $exporter_type_values.name }}{{`
+    namespace: infra-exporters
     labels$global_values:
       system: openstack
       service: metrics
@@ -29,36 +29,36 @@ template: |
     template:
       metadata:
         labels:
-          component: vcenter-exporter-{{ name }}-`}}{{ $exporter_type_values.name }}{{`
+          component: vcenter-exporter-{{ name }}-`}}{{ required ".Values.vcenter_exporters.<exporter_type>.name is missing" $exporter_type_values.name }}{{`
       spec:
         nodeSelector:
           zone: farm
         volumes:
           - name: maia-etc
             configMap:
-              name: vcenter-exporter-{{ name }}-`}}{{ $exporter_type_values.name }}{{`
+              name: vcenter-exporter-{{ name }}-`}}{{ required ".Values.vcenter_exporters.<exporter_type>.name is missing" $exporter_type_values.name }}{{`
         containers:
           - name: vcenter-exporter
             imagePullPolicy: IfNotPresent
-            image: `}}{{ $global_values.vcenter_exporters.docker_repo }}/infrastructure-exporters:{{ $global_values.vcenter_exporters.image_version | replace "string:" "" }}{{`
+            image: `}}{{ required ".Values.vcenter_exporters.docker_repo is missing" $global_values.vcenter_exporters.docker_repo }}/infrastructure-exporters:{{ $global_values.vcenter_exporters.image_version | replace "string:" "" }}{{`
             args:
               - -f
-              - /maia-etc/config-{{ name }}-`}}{{ $exporter_type_values.name }}{{`.yaml
+              - /maia-etc/config-{{ name }}-`}}{{ required ".Values.vcenter_exporters.<exporter_type>.name is missing" $exporter_type_values.name }}{{`.yaml
               - -t
               - `}}{{ $exporter_type_values.name }}{{`
             `}}{{- if $global_values.vcenter_exporters.resources.enabled }}{{`
             resources:
               requests:
-                memory: `}}{{ $global_values.vcenter_exporters.resources.requests.memory | quote }}{{`
+                memory: `}}{{ required ".Values.vcenter_exporters.resources.requests.memory is missing" $global_values.vcenter_exporters.resources.requests.memory | quote }}{{`
               limits:
-                memory: `}}{{ $global_values.vcenter_exporters.resources.limits.memory | quote }}{{`
+                memory: `}}{{ required ".Values.vcenter_exporters.resources.limits.memory is missing" $global_values.vcenter_exporters.resources.limits.memory | quote }}{{`
             `}}{{- end }}{{`
             volumeMounts:
               - mountPath: /maia-etc
                 name: maia-etc
             ports:
               - name: metrics
-                containerPort: `}}{{ $global_values.vcenter_exporters.prometheus_port | quote}}{{`
+                containerPort: `}}{{ required ".Values.vcenter_exporters.prometheus_port is missing" $global_values.vcenter_exporters.prometheus_port | quote}}{{`
 `}}
 {{- end }}
 {{- end }}
