[neutron] rabbitmq improvements

--- a/common/staging/rabbitmq/templates/statefulset.yaml
+++ b/common/staging/rabbitmq/templates/statefulset.yaml
@@ -93,6 +93,10 @@ spec:
             value: "http://127.0.0.1:{{.Values.ports.management}}"
           - name: RABBIT_CAPABILITIES
             value: "bert,no_sort"
+          - name: SKIP_QUEUES
+            value: {{ .Values.metrics.skipQueues }}
+          - name: RABBIT_EXPORTERS
+            value: {{ .Values.metrics.exporters }}
         resources:
 {{ toYaml (required "missing .resources" .Values.metrics.resources) | indent 10 }}
         ports:
