--- a/common/staging/rabbitmq/values.yaml
+++ b/common/staging/rabbitmq/values.yaml
@@ -58,6 +58,8 @@ metrics:
   user: monitoring
 #  password:
   port: 9150
+  skipQueues: "^(.*_fanout_|reply).*$"
+  exporters: "node,overview,queue"
   resources:
     limits:
       memory: 128Mi
