[neutron] revert rabbitmq-cluster for neutron

--- a/openstack/neutron/requirements.yaml
+++ b/openstack/neutron/requirements.yaml
@@ -6,7 +6,7 @@ dependencies:
     repository: file://../../common/pgmetrics
     version: 0.1.0
   - name: rabbitmq
-    repository: file://../../common/staging/rabbitmq
+    repository: file://../../common/rabbitmq
     version: 0.1.0
   - name: memcached
     repository: file://../../common/memcached
@@ -14,7 +14,7 @@ dependencies:
   - name: rabbitmq
     alias: rabbitmq_notifications
     condition: audit.enabled
-    repository: file://../../common/staging/rabbitmq
+    repository: file://../../common/rabbitmq
     version: 0.1.0
   - name: utils
     repository: file://../../openstack/utils
