[swift] enable resource request/limits

--- a/openstack/swift-utils/values.yaml
+++ b/openstack/swift-utils/values.yaml
@@ -16,7 +16,7 @@ imageRegistry_repo: swift
 image_version: DEFINED_BY_PIPELINE
 
 resources:
-  enabled: false
+  enabled: true
 
 # Deploy swift-account-caretaker
 swift_account_caretaker:
