--- a/openstack/swift/values.yaml
+++ b/openstack/swift/values.yaml
@@ -66,7 +66,7 @@ sentry:
   enabled: false
 
 resources:
-  enabled: false
+  enabled: true
 
 # If the swift cluster is shared across multiple openstack clusters, one can
 # start multiple proxy deployments connecting to the different keystone backends
