[neutron] use more sane nsx-t default values

--- a/openstack/neutron/values.yaml
+++ b/openstack/neutron/values.yaml
@@ -97,7 +97,10 @@ drivers:
     defaults:
       AGENT:
         sync_pool_size: 10
-        db_max_records_per_query: 2000
+        polling_interval: 20
+        quitting_rpc_timeout: 60
+        sync_requests_per_second: 1
+        db_max_records_per_query: 1000
       NSXV3:
         nsxv3_connection_retry_count: 10
         nsxv3_connection_retry_sleep: 5
@@ -105,6 +108,7 @@ drivers:
         nsxv3_transport_zone_name: TZ-VLAN
         nsxv3_suppress_ssl_wornings: True
         nsxv3_max_records_per_query: 2000
+        nsxv3_requests_per_second: 1
 # cisco_ucsm_bm:
 #  example.com:
 #    user:
