--- a/openstack/infra-exporters/vcenter-exporters/templates/vcenter_datacenter_exporter_deployment.yaml
+++ b/openstack/infra-exporters/vcenter-exporters/templates/vcenter_datacenter_exporter_deployment.yaml
@@ -14,8 +14,8 @@ template: |
   apiVersion: extensions/v1beta1
   metadata:
     name: vcenter-exporter-{{ name }}-`}}{{ required ".Values.vcenter_exporters.<exporter_type>.name is missing" $exporter_type_values.name }}{{`
-    namespace: infra-exporters
-    labels$global_values:
+    namespace: monsoon3
+    labels:
       system: openstack
       service: metrics
 
