--- a/openstack/infra-exporters/vcenter-exporters/templates/vcenter_datacenter_exporter_service.yaml
+++ b/openstack/infra-exporters/vcenter-exporters/templates/vcenter_datacenter_exporter_service.yaml
@@ -14,7 +14,7 @@ template: |
   apiVersion: v1
   metadata:
     name: vcenter-exporter-{{ name }}-`}}{{ required ".Values.vcenter_exporters.<exporter_type>.name is missing" $exporter_type_values.name }}{{`
-    namespace: infra-exporters
+    namespace: monsoon3
     labels:
       system: openstack
       service: metrics
