--- a/openstack/elk/templates/es-manager-deployment.yaml
+++ b/openstack/elk/templates/es-manager-deployment.yaml
@@ -42,6 +42,7 @@ spec:
         args:
           - /opt/cerebro/bin/cerebro
           - -Dconfig.file=/es-etc/elasticsearch-application.conf
+          - -Dcom.sun.jndi.ldap.object.disableEndpointIdentification=true
         env:
           - name: NAMESPACE
             valueFrom:
