[keystone] added support for limiting identity driver result counts to prevent OOM and latency issues

--- a/openstack/keystone/values.yaml
+++ b/openstack/keystone/values.yaml
@@ -105,6 +105,10 @@ api:
     # means that access tokens will last forever. (integer value)
     access_token_duration: 0
 
+  identity:
+    # Maximum number of entities that will be returned in an identity collection. 0 disables the limit
+    list_limit: 0
+
   metrics:
     enabled: true
     port: '9102'
