--- a/openstack/elk/templates/es-bin-configmap.yaml
+++ b/openstack/elk/templates/es-bin-configmap.yaml
@@ -11,3 +11,7 @@ metadata:
 data:
   elasticsearch-start: |
 {{ include "elk/templates/bin/_elasticsearch-start.tpl" . | indent 4 }}
+  es-enable-sync.sh: |
+{{ include "elk/templates/bin/_es-enable-sync.sh.tpl" . | indent 4 }}
+  es-disable-sync.sh: |
+{{ include "elk/templates/bin/_es-disable-sync.sh.tpl" . | indent 4 }}
