--- a/openstack/designate/requirements.yaml
+++ b/openstack/designate/requirements.yaml
@@ -18,3 +18,6 @@ dependencies:
   - name: utils
     repository: file://../../openstack/utils
     version: 0.1.1
+  - name: region_check
+    repository: file://../../common/region_check
+    version: 0.1.0
