[Designate] adding required to image values in helm template

--- a/openstack/designate/templates/mdns-deployment.yaml
+++ b/openstack/designate/templates/mdns-deployment.yaml
@@ -34,7 +34,7 @@ spec:
 {{- end }}
       containers:
         - name: designate-mdns
-          image: {{.Values.global.image_repository}}/{{.Values.global.image_namespace}}/ubuntu-source-designate-mdns:{{.Values.image_version_designate_mdns}}
+          image: {{required ".Values.global.image_repository is missing" .Values.global.image_repository}}/{{.Values.global.image_namespace}}/ubuntu-source-designate-mdns:{{required ".Values.global.image_version_designate_mdns is missing" .Values.image_version_designate_mdns}}
           imagePullPolicy: IfNotPresent
           command:
             - /usr/local/bin/kubernetes-entrypoint
