--- a/openstack/designate/templates/api-deployment.yaml
+++ b/openstack/designate/templates/api-deployment.yaml
@@ -34,7 +34,7 @@ spec:
 {{- end }}
       containers:
         - name: designate-api
-          image: {{.Values.global.image_repository}}/{{.Values.global.image_namespace}}/ubuntu-source-designate-api:{{.Values.image_version_designate_api}}
+          image: {{required ".Values.global.image_repository is missing" .Values.global.image_repository}}/{{.Values.global.image_namespace}}/ubuntu-source-designate-api:{{required ".Values.global.image_version_designate_api is missing" .Values.image_version_designate_api}}
           imagePullPolicy: IfNotPresent
           command:
             - kubernetes-entrypoint
