--- a/openstack/designate/templates/tests/tempest-validation.yaml
+++ b/openstack/designate/templates/tests/tempest-validation.yaml
@@ -12,7 +12,7 @@ spec:
   restartPolicy: Never
   containers:
     - name: designate-tempest
-      image: {{.Values.global.image_repository}}/{{.Values.global.image_namespace}}/ubuntu-source-rally:{{.Values.image_version_designate_tempest}}
+      image: {{required ".Values.global.image_repository is missing" .Values.global.image_repository}}/{{.Values.global.image_namespace}}/ubuntu-source-rally:{{required ".Values.global.image_version_designate_tempest is missing" .Values.image_version_designate_tempest}}
       imagePullPolicy: IfNotPresent
       command:
         - /usr/local/bin/kubernetes-entrypoint
