--- a/openstack/designate/values.yaml
+++ b/openstack/designate/values.yaml
@@ -42,9 +42,9 @@ pod:
            max_unavailable: 0
            max_surge: 1
 
-image_version_designate_api:  DEFINED-IN-REGION-CHART
-image_version_designate_central:  DEFINED-IN-REGION-CHART
-image_version_designate_mdns:  DEFINED-IN-REGION-CHART
+# image_version_designate_api:  DEFINED-IN-REGION-CHART
+# image_version_designate_central:  DEFINED-IN-REGION-CHART
+# image_version_designate_mdns:  DEFINED-IN-REGION-CHART
 
 bind_pools:
   - name: default
