add fix limit parameter to vcenter nanny consistency deployment

--- a/openstack/vcenter-utilities/templates/vcenter_datacenter_nanny_consistency_deployment.yaml
+++ b/openstack/vcenter-utilities/templates/vcenter_datacenter_nanny_consistency_deployment.yaml
@@ -62,6 +62,8 @@ template: |{{`
                 value: "`}}{{ .Values.vcenter_nanny_consistency.iterations }}{{`"
               - name: VCENTER_CONSISTENCY_INTERVAL
                 value: "`}}{{ .Values.vcenter_nanny_consistency.interval }}{{`"
+              - name: VCENTER_CONSISTENCY_FIX_LIMIT
+                value: "`}}{{ .Values.vcenter_nanny_consistency.fix_limit }}{{`"
               - name: CINDER_POSTGRESQL_PW
                 value: "`}}{{ .Values.from_cinder.global.dbPassword }}{{`"
               - name: NOVA_POSTGRESQL_PW
