--- a/openstack/vcenter-utilities/values.yaml
+++ b/openstack/vcenter-utilities/values.yaml
@@ -45,6 +45,8 @@ vcenter_nanny_consistency:
   interval: 60
   # warn after how many iterations
   iterations: 3
+  # maximum number of inconsistent volumes to fix automatically - otherwise fixing will be denied
+  fix_limit: 10
 
 vcenter_exporter:
   enabled: False
