--- a/openstack/hermes/templates/elasticsearch-deployment.yaml
+++ b/openstack/hermes/templates/elasticsearch-deployment.yaml
@@ -69,5 +69,5 @@ spec:
               mountPath: /data
           resources:
             requests:
-              memory: {{.Values.resources_requests_memory_es}}
-              cpu: {{.Values.resources_requests_cpu_es}}
+              memory: {{required ".Values.resources_requests_memory_es is missing" .Values.resources_requests_memory_es}}
+              cpu: {{requried ".Values.resources_requests_cpu_es is missing" .Values.resources_requests_cpu_es}}
