--- a/openstack/hermes/templates/elasticsearch-pvclaim.yaml
+++ b/openstack/hermes/templates/elasticsearch-pvclaim.yaml
@@ -11,4 +11,4 @@ spec:
   resources:
     requests:
       # size storage so that the retention kicks in at 70% of capacity consumption
-      storage: {{.Values.elasticsearch_pv_size}}Gi
+      storage: {{required ".Values.elasticsearch_pv_size is missing" .Values.elasticsearch_pv_size}}Gi
