--- a/openstack/hermes/templates/logstash-deployment.yaml
+++ b/openstack/hermes/templates/logstash-deployment.yaml
@@ -54,8 +54,8 @@ spec:
               mountPath: /hermes-etc
           resources:
             requests:
-              memory: {{.Values.resources_requests_memory_ls}}
-              cpu: {{.Values.resources_requests_cpu_ls}}
+              memory: {{required ".Values.resources_requests_memory_ls is missing" .Values.resources_requests_memory_ls}}
+              cpu: {{required ".Values.resources_requests_cpu_ls is missing" .Values.resources_requests_cpu_ls}}
 
         - name: logstash-exporter
           image: bonniernews/logstash_exporter:v0.1.2
