--- a/openstack/hermes/values.yaml
+++ b/openstack/hermes/values.yaml
@@ -1,4 +1,4 @@
-global.region: DEFINED_IN_VALUES_FILE
+# global.region: DEFINED_IN_VALUES_FILE
 hermes:
   debug: 0
   insecure: 0
@@ -29,10 +29,10 @@ resources_requests_cpu_ki: "250m"
 
 # the elasticsearch disk is 100g, a bit less will be the filesystem and 70g should be below 80% where we would alert
 # Current value get's multipled, and divided to create the volume size. 
-hermes_elasticsearch_data_retention: DEFINED-IN-REGION-SECRETS
+# hermes_elasticsearch_data_retention: DEFINED-IN-REGION-SECRETS
 elasticsearch_pv_size: 92
 
-image_version_hermes_kibana: DEFINED-IN-REGION-SECRETS
+# image_version_hermes_kibana: DEFINED-IN-REGION-SECRETS
 hermes_kibana_port_public: '5601'
 deploy_kibana: false # true in staging values
 
@@ -42,7 +42,7 @@ rabbitmq_notifications:
   users:
     default:
       user: openstack
-      password: DEFINED-IN-SECRETS
+      # password: DEFINED-IN-SECRETS
     admin:
       user: admin
-      password: DEFINED-IN-SECRETS
+      # password: DEFINED-IN-SECRETS
