[hermes] required - fix typo

--- a/openstack/hermes/templates/elasticsearch-deployment.yaml
+++ b/openstack/hermes/templates/elasticsearch-deployment.yaml
@@ -70,4 +70,4 @@ spec:
           resources:
             requests:
               memory: {{required ".Values.resources_requests_memory_es is missing" .Values.resources_requests_memory_es}}
-              cpu: {{requried ".Values.resources_requests_cpu_es is missing" .Values.resources_requests_cpu_es}}
+              cpu: {{required ".Values.resources_requests_cpu_es is missing" .Values.resources_requests_cpu_es}}
