introduce a separate image version for the consistency nanny, so that we do not always redeploy the cleanup nanny even if nothing changed there

--- a/openstack/vcenter-utilities/templates/vcenter_datacenter_nanny_consistency_deployment.yaml
+++ b/openstack/vcenter-utilities/templates/vcenter_datacenter_nanny_consistency_deployment.yaml
@@ -34,7 +34,7 @@ template: |{{`
               name: nova-etc
         containers:
           - name: vcenter-consistency
-            image: `}}{{ .Values.vcenter_nanny.docker_repo }}/vcenter-nanny:{{ .Values.vcenter_nanny.image_version | replace "string:" "" }}{{`
+            image: `}}{{ .Values.vcenter_nanny.docker_repo }}/vcenter-nanny:{{ .Values.vcenter_nanny_consistency.consistency_image_version | replace "string:" "" }}{{`
             imagePullPolicy: IfNotPresent
             command:
               - dumb-init
