--- a/openstack/vcenter-utilities/values.yaml
+++ b/openstack/vcenter-utilities/values.yaml
@@ -35,9 +35,9 @@ current_region: "will_be_set_by_helm_deployment"
 
 vcenter_nanny_consistency:
   enabled: False
-  # these two we use from the vcenter nanny entry above as we use the same docker image
+  # this one we use from the vcenter nanny entry above as we use the same docker repo
   # docker_repo: DEFINED-IN-REGION-CHART
-  # image_version: DEFINED-IN-REGION-CHART
+  consistency_image_version: DEFINED-IN-REGION-CHART
   debug: True
   # dry run mode, i.e. just pretend to cleanup the entries
   dry_run: true
