[keystone] disable credentials admin tempest test for now

--- a/openstack/keystone/templates/tests/keystone-tempest.yaml
+++ b/openstack/keystone/templates/tests/keystone-tempest.yaml
@@ -75,6 +75,10 @@ spec:
           mountPath: /etc/tempest/accounts.yaml
           subPath: accounts.yaml
           readOnly: true
+        - name: keystone-etc
+          mountPath: /etc/tempest/tempest-skip-list.yaml
+          subPath: tempest-skip-list.yaml
+          readOnly: true
   volumes:
     - name: etc-tempest
       emptyDir: {}
