[keystone] use fully qualified test names in rally verify skip-list

--- a/openstack/keystone/templates/configmap-etc.yaml
+++ b/openstack/keystone/templates/configmap-etc.yaml
@@ -26,7 +26,8 @@ data:
   tempest.conf: |
 {{ include (print .Template.BasePath "/etc/_tempest.conf.tpl") . | indent 4 }}
   tempest-skip-list.yaml: |
-    tempest.api.identity.admin.v3.test_credentials: admins should have no access for now (risk of credential disclosure)
+    tempest.api.identity.admin.v3.test_credentials.CredentialsTestJSON.test_credentials_create_get_update_delete: admins should have no access for now (risk of credential disclosure)
+    tempest.api.identity.admin.v3.test_credentials.CredentialsTestJSON.test_credentials_list_delete: admins should have no access for now (risk of credential disclosure)
   accounts.yaml: |
 {{ include (print .Template.BasePath "/etc/_tempest_accounts.yaml.tpl") . | indent 4 }}
   rally_deployment_config.json: |
