[keystone] added id's to rally verify skip-list

--- a/openstack/keystone/templates/configmap-etc.yaml
+++ b/openstack/keystone/templates/configmap-etc.yaml
@@ -26,8 +26,8 @@ data:
   tempest.conf: |
 {{ include (print .Template.BasePath "/etc/_tempest.conf.tpl") . | indent 4 }}
   tempest-skip-list.yaml: |
-    tempest.api.identity.admin.v3.test_credentials.CredentialsTestJSON.test_credentials_create_get_update_delete: admins should have no access for now (risk of credential disclosure)
-    tempest.api.identity.admin.v3.test_credentials.CredentialsTestJSON.test_credentials_list_delete: admins should have no access for now (risk of credential disclosure)
+    tempest.api.identity.admin.v3.test_credentials.CredentialsTestJSON.test_credentials_create_get_update_delete[id-7cd59bf9-bda4-4c72-9467-d21cab278355]: admins should have no access for now (risk of credential disclosure)
+    tempest.api.identity.admin.v3.test_credentials.CredentialsTestJSON.test_credentials_list_delete[id-13202c00-0021-42a1-88d4-81b44d448aab]: admins should have no access for now (risk of credential disclosure)
   accounts.yaml: |
 {{ include (print .Template.BasePath "/etc/_tempest_accounts.yaml.tpl") . | indent 4 }}
   rally_deployment_config.json: |
