--- a/openstack/neutron/values.yaml
+++ b/openstack/neutron/values.yaml
@@ -53,6 +53,7 @@ imageName: 'monsoon/loci-neutron'
 # imageVersionNetworkAgentMetadata:
 # imageVersionNetworkAgentL3:
 # imageVersionNetworkAgentOVS:
+# imageVersionIronicAgent:
 
 service_plugins: neutron_lbaas.services.loadbalancer.plugin.LoadBalancerPluginv2,networking_cisco.plugins.cisco.service_plugins.cisco_device_manager_plugin.CiscoDeviceManagerPlugin,networking_cisco.plugins.cisco.service_plugins.cisco_router_plugin.CiscoRouterPlugin
 default_router_type: ASR1k_router
