--- a/openstack/elk/templates/es-data.yaml
+++ b/openstack/elk/templates/es-data.yaml
@@ -17,6 +17,11 @@ spec:
     matchLabels:
       component: elasticsearch
       role: data
+  strategy:
+    type: RollingUpdate
+    rollingUpdate:
+      maxUnavailable: 1
+      maxSurge: {{.Values.elk_elasticsearch_data_replicas}}
   template:
     metadata:
       labels:
